[package]
name = "hyper_ring"
version = "0.1.0"
edition = "2024"

[dependencies]
wdk = "0.3.1"
wdk-alloc = "0.3.1"
wdk-panic = "0.3.1"
wdk-sys = "0.4.0"
x86 = "0.52.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
generic_once_cell = "0.1.1"
spin = {version = "0.10.0", features = ["lock_api", "spin_mutex"]}
lock_api = "0.4.13"
bitfields = "1.0.0"
simple-bits = "1.0.1"

[build-dependencies]
wdk-build = "0.4.0"

[package.metadata.wdk.driver-model]
driver-type = "WDM"

[profile.dev]
panic="abort"

[profile.release]
panic="abort"

[lib]
crate-type = ["cdylib"]